[package]
name = "intercept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proxy-wasm = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
base64 = "0.13.0"
[lib]
crate-type = ["cdylib"]